--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Modern Business - Start Bootstrap Template</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/mainlogo.png" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -18,7 +18,14 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                    <a class="navbar-brand" href="index.html"><img class= ".img-fluid  h-25 w-25" src="assets/mainlogo.png" alt="..."/></a>
+                    <div class="list-unstyled">
+                        <ul>
+                            <li><img class=".img-fluid h-25 w-25" src="assets/phoneicon.PNG" alt="..." /><a>774-764-7725</a></li>
+                            <li><img class=".img-fluid h-25 w-25" src="assets/emailicon.PNG" alt="..." /><a>rightsizedlivingma@gmail.com</a></li>
+                            <li><img class=".img-fluid h-25 w-25" src="assets/facebookicon.PNG" alt="..." /><a href="https://www.facebook.com/">Facebook</a></li>
+                        </ul>
+                    </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -26,19 +33,19 @@
                             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                             <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
                             <li class="nav-item"><a class="nav-link" href="testimonial.html">Testimonials</a></li>
-                            <li class="nav-item"><a class="contact-button" href="contact.html">Contact Us</a></li>
+                            <li class="nav-item"><a class="btn-lg contact-button" href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
             <!-- Header-->
-            <header class="bg-dark py-5">
+            <header class="bg-light py-5">
                 <div class="container px-5">
                     <div class="row gx-5 align-items-center justify-content-center">
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
-                                <h1 class="display-5 fw-bolder text-white mb-2">A Bootstrap 5 template for modern businesses</h1>
-                                <p class="lead fw-normal text-white-50 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
+                                <h1 class="display-5 fw-bolder text-navy mb-2">Personalized for your perfect move!</h1>
+                                <p class="lead fw-normal text-navy-50 mb-4">Professionals dedicated to helping older adults, families and businesses with organizing, downsizing and relocating.</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                     <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
                                     <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
