--- a/contact.html
+++ b/contact.html
@@ -16,45 +16,38 @@
     <body class="d-flex flex-column">
         <main class="flex-shrink-0">
             <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                    <a class="navbar-brand" href="index.html"><img class= ".img-fluid  h-25 w-25" src="assets/mainlogo.png" alt="..."/></a>
+                    <!--<div class="list-unstyled">
+                        <ul>
+                            <li><img class=".img-fluid h-25 w-25" src="assets/phoneicon.PNG" alt="..." /><a>774-764-7725</a></li>
+                            <li><img class=".img-fluid h-25 w-25" src="assets/emailicon.PNG" alt="..." /><a>rightsizedlivingma@gmail.com</a></li>
+                            <li><img class=".img-fluid h-25 w-25" src="assets/facebookicon.PNG" alt="..." /><a href="https://www.facebook.com/">Facebook</a></li>
+                        </ul>
+                    </div>
+                -->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                            <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
                             <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
-                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                    <li><a class="dropdown-item" href="blog-home.html">Blog Home</a></li>
-                                    <li><a class="dropdown-item" href="blog-post.html">Blog Post</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
-                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
-                                    <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
-                                    <li><a class="dropdown-item" href="portfolio-item.html">Portfolio Item</a></li>
-                                </ul>
-                            </li>
+                            <li class="nav-item"><a class="nav-link" href="testimonial.html">Testimonials</a></li>
+                            <li class="nav-item ms-2"><a class="btn-lg contact-button" href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
             <!-- Page content-->
-            <section class="py-5">
+            <section>
+                <div class="text-center py-5 px-0" style="background-color: rgb(217, 217, 217, 0.4);">
+                    <h1 class="fw-bolder text-navy">Get in touch</h1>
+                    <p class="lead fw-normal text-navy text-muted mb-0">We'd love to hear from you!</p>
+                </div>
                 <div class="container px-5">
                     <!-- Contact form-->
-                    <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
-                        <div class="text-center mb-5">
-                            <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
-                            <h1 class="fw-bolder">Get in touch</h1>
-                            <p class="lead fw-normal text-muted mb-0">We'd love to hear from you</p>
-                        </div>
+                    <div class="rounded-3 py-5 px-4 px-md-5 mb-5">
                         <div class="row gx-5 justify-content-center">
                             <div class="col-lg-8 col-xl-6">
                                 <!-- * * * * * * * * * * * * * * *-->
