--- a/index.html
+++ b/index.html
@@ -19,88 +19,70 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container px-5">
                     <a class="navbar-brand" href="index.html"><img class= ".img-fluid  h-25 w-25" src="assets/mainlogo.png" alt="..."/></a>
-                    <div class="list-unstyled">
+                    <!--<div class="list-unstyled">
                         <ul>
                             <li><img class=".img-fluid h-25 w-25" src="assets/phoneicon.PNG" alt="..." /><a>774-764-7725</a></li>
                             <li><img class=".img-fluid h-25 w-25" src="assets/emailicon.PNG" alt="..." /><a>rightsizedlivingma@gmail.com</a></li>
                             <li><img class=".img-fluid h-25 w-25" src="assets/facebookicon.PNG" alt="..." /><a href="https://www.facebook.com/">Facebook</a></li>
                         </ul>
                     </div>
+                -->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+                            <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                            <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                            <li class="nav-item"><a class="nav-link" href="faq.html">FAQs</a></li>
                             <li class="nav-item"><a class="nav-link" href="testimonial.html">Testimonials</a></li>
-                            <li class="nav-item"><a class="btn-lg contact-button" href="contact.html">Contact Us</a></li>
+                            <li class="nav-item ms-2"><a class="btn-lg contact-button" href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
             <!-- Header-->
-            <header class="bg-light py-5">
-                <div class="container px-5">
+            <header class="bg-light py-5" style="background-image: url('assets/background\ image.png');">
+                <div class="container px-5 my-6">
                     <div class="row gx-5 align-items-center justify-content-center">
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
                                 <h1 class="display-5 fw-bolder text-navy mb-2">Personalized for your perfect move!</h1>
-                                <p class="lead fw-normal text-navy-50 mb-4">Professionals dedicated to helping older adults, families and businesses with organizing, downsizing and relocating.</p>
+                                <p class="lead fw-normal text-navy mb-4">Professionals dedicated to helping older adults, families and businesses with organizing, downsizing and relocating.</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                     <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
                                     <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"></div>
                     </div>
                 </div>
             </header>
             <!-- Features section-->
             <section class="py-5" id="features">
-                <div class="container px-5 my-5">
-                    <div class="row gx-5">
-                        <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">A better way to start building.</h2></div>
-                        <div class="col-lg-8">
-                            <div class="row gx-5 row-cols-1 row-cols-md-2">
-                                <div class="col mb-5 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
-                                </div>
-                                <div class="col mb-5 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
-                                </div>
-                                <div class="col mb-5 mb-md-0 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
-                                </div>
-                                <div class="col h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
-                                </div>
-                            </div>
-                        </div>
+                <div class="container px-5 my-2 reveal">
+                    <div class="row text-center justify-content-center w-75 m-auto">                        
+                            <h2 class="fw-bolder mb-2 text-xxl-center">Your Trusted Moving Partner</h2>
+                            <img class=".img-fluid h-12 w-12 my-2" src="assets/handholding.png" alt="..." />
+                            <p class="fs-3 text-xxl-center font-roboto">RightSized Living Inc. provides a single point of contact to our clients, their families, caregivers and housing administrators. We will be by your side throughout the whole relocation process as your trusted moving partner – certified, experienced, reliable, fully insured, and bonded.</p>
+                            <p class="fs-3 text-xxl-center my-3 font-roboto">Our mission is to create a beautiful, comfortable, and safe environment for our clients while managing the stress for you. No job is too big or too small, we do it all!</p>
+                            <a class="btn btn-outline-light btn-lg px-4 mt-5" style="width:30%;" href="#services">What We Provide</a>
                     </div>
                 </div>
             </section>
             <!-- Testimonial section-->
             <div class="py-5 bg-light">
-                <div class="container px-5 my-5">
+                <div class="container px-5 my-5 reveal">
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-10 col-xl-7">
                             <div class="text-center">
-                                <div class="fs-4 mb-4 fst-italic">"Working with Start Bootstrap templates has saved me tons of development time when building new projects! Starting with a Bootstrap template just makes things easier!"</div>
+                                <div class="fs-3 mb-4">“You and your entire team helped make this move so easy and enjoyable. RightSized Living took all the stress away!”</div>
                                 <div class="d-flex align-items-center justify-content-center">
                                     <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
                                     <div class="fw-bold">
-                                        Tom Ato
+                                        Michael & Marie N.
                                         <span class="fw-bold text-primary mx-1">/</span>
-                                        CEO, Pomodoro
+                                        Valued Customers
                                     </div>
                                 </div>
                             </div>
@@ -108,98 +90,49 @@
                     </div>
                 </div>
             </div>
-            <!-- Blog preview section-->
-            <section class="py-5">
-                <div class="container px-5 my-5">
+            <!-- Services section-->
+            <section class="py-5" id="services">
+                <div class="container px-5 my-5 reveal">
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-8 col-xl-6">
                             <div class="text-center">
-                                <h2 class="fw-bolder">From our blog</h2>
-                                <p class="lead fw-normal text-muted mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque fugit ratione dicta mollitia. Officiis ad.</p>
+                                <h2 class="fw-bolder">Senior Moving, Organizing, Relocating, and So Much More!</h2>
+                                <img class=".img-fluid h-12 w-12 my-2" src="assets/truck.png" alt="..." />
+                                <p class="lead fw-normal text-muted mb-5 font-roboto">Improving your quality of life by offering our valuable, time saving services including...</p>
                             </div>
                         </div>
                     </div>
-                    <div class="row gx-5">
+                    <div class="row gx-5 justify-content-center">                      
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="..." />
-                                <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Blog post title</h5></a>
-                                    <p class="card-text mb-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                </div>
-                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
-                                    <div class="d-flex align-items-end justify-content-between">
-                                        <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
-                                            <div class="small">
-                                                <div class="fw-bold">Kelly Rowan</div>
-                                                <div class="text-muted">March 12, 2022 &middot; 6 min read</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                <img class="card-img-top" src="assets/taping.png" alt="..." />
+                                <div class="card-body p-2" style="background-color:rgb(217, 217, 217, 0.4);">
+                                    <ul class="card-text my-3">
+                                        <li>Organizing and sorting all household items</li>
+                                        <li>Customizing floor plans and packing</li>
+                                        <li>Unpacking and setting up your new home</li>
+                                        <li>Arranging for the profitable disposal of unwanted items through auction, estate sale, consignment, donation, or a combination of the above</li>
+                                    </ul>
+                                </div>                     
                             </div>
                         </div>
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="https://dummyimage.com/600x350/adb5bd/495057" alt="..." />
-                                <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">Media</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Another blog post title</h5></a>
-                                    <p class="card-text mb-0">This text is a bit longer to illustrate the adaptive height of each card. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                </div>
-                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
-                                    <div class="d-flex align-items-end justify-content-between">
-                                        <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
-                                            <div class="small">
-                                                <div class="fw-bold">Josiah Barclay</div>
-                                                <div class="text-muted">March 23, 2022 &middot; 4 min read</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 mb-5">
-                            <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="https://dummyimage.com/600x350/6c757d/343a40" alt="..." />
-                                <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">The last blog post title is a little bit longer than the others</h5></a>
-                                    <p class="card-text mb-0">Some more quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                </div>
-                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
-                                    <div class="d-flex align-items-end justify-content-between">
-                                        <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
-                                            <div class="small">
-                                                <div class="fw-bold">Evelyn Martinez</div>
-                                                <div class="text-muted">April 2, 2022 &middot; 10 min read</div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                <img class="card-img-top" src="assets/women.png" alt="..." />
+                                <div class="card-body p-2" style="background-color:rgb(217, 217, 217, 0.4);">
+                                    <ul class="card-text my-3">
+                                        <li>Scheduling and overseeing insured movers and storage providers</li>
+                                        <li>Developing an overall move or “age in place” plan</li>
+                                        <li>Related services, such as cleaning and waste removal</li>
+                                        <li>Working with your realtor on home staging and sale preparation</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- Call to action-->
-                    <aside class="bg-primary bg-gradient rounded-3 p-4 p-sm-5 mt-5">
-                        <div class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start">
-                            <div class="mb-4 mb-xl-0">
-                                <div class="fs-3 fw-bold text-white">New products, delivered to you.</div>
-                                <div class="text-white-50">Sign up for our newsletter for the latest updates.</div>
-                            </div>
-                            <div class="ms-xl-4">
-                                <div class="input-group mb-2">
-                                    <input class="form-control" type="text" placeholder="Email address..." aria-label="Email address..." aria-describedby="button-newsletter" />
-                                    <button class="btn btn-outline-light" id="button-newsletter" type="button">Sign up</button>
-                                </div>
-                                <div class="small text-white-50">We care about privacy, and will never share your data.</div>
-                            </div>
-                        </div>
-                    </aside>
+                    <div class="row gx-5 justify-content-center">
+                        <a class="btn btn-outline-light btn-lg px-4" style="width:50%;" href="#services">Find Which Services are Best for You!</a>
+                    </div>
                 </div>
             </section>
         </main>
