--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content />
         <meta name="author" content />
-        <title>Modern Business - Start Bootstrap Template</title>
+        <title>RightSized Living</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/mainlogo.png" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -31,8 +31,9 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+                            <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                            <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                            <li class="nav-item"><a class="nav-link" href="faq.html">FAQs</a></li>
                             <li class="nav-item"><a class="nav-link" href="testimonial.html">Testimonials</a></li>
                             <li class="nav-item ms-2"><a class="btn-lg contact-button" href="contact.html">Contact Us</a></li>
                         </ul>
@@ -48,61 +49,65 @@
                 <div class="container px-5">
                     <!-- Contact form-->
                     <div class="rounded-3 py-5 px-4 px-md-5 mb-5">
-                        <div class="row gx-5 justify-content-center">
-                            <div class="col-lg-8 col-xl-6">
-                                <!-- * * * * * * * * * * * * * * *-->
-                                <!-- * * SB Forms Contact Form * *-->
-                                <!-- * * * * * * * * * * * * * * *-->
-                                <!-- This form is pre-integrated with SB Forms.-->
-                                <!-- To make this form functional, sign up at-->
-                                <!-- https://startbootstrap.com/solution/contact-forms-->
-                                <!-- to get an API token!-->
-                                <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                                    <!-- Name input-->
-                                    <div class="form-floating mb-3">
-                                        <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                        <label for="name">Full name</label>
-                                        <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                        <div class="row gx-5 align-items-center">
+                            <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="assets/contactphoto.png" alt="..." /></div>                            <div class="col-lg-6">
+                                <div class="row gx-5 justify-content-center" >
+                                    <div class="col-lg-8 col-xl-6">
+                                        <!-- * * * * * * * * * * * * * * *-->
+                                        <!-- * * SB Forms Contact Form * *-->
+                                        <!-- * * * * * * * * * * * * * * *-->
+                                        <!-- This form is pre-integrated with SB Forms.-->
+                                        <!-- To make this form functional, sign up at-->
+                                        <!-- https://startbootstrap.com/solution/contact-forms-->
+                                        <!-- to get an API token!-->
+                                        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                                            <!-- Name input-->
+                                            <div class="form-floating mb-3">
+                                                <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
+                                                <label for="name">Full name</label>
+                                                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                                            </div>
+                                            <!-- Email address input-->
+                                            <div class="form-floating mb-3">
+                                                <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
+                                                <label for="email">Email address</label>
+                                                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
+                                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+                                            </div>
+                                            <!-- Phone number input-->
+                                            <div class="form-floating mb-3">
+                                                <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
+                                                <label for="phone">Phone number</label>
+                                                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+                                            </div>
+                                            <!-- Message input-->
+                                            <div class="form-floating mb-3">
+                                                <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
+                                                <label for="message">Message</label>
+                                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                                            </div>
+                                            <!-- Submit success message-->
+                                            <!---->
+                                            <!-- This is what your users will see when the form-->
+                                            <!-- has successfully submitted-->
+                                            <div class="d-none" id="submitSuccessMessage">
+                                                <div class="text-center mb-3">
+                                                    <div class="fw-bolder">Form submission successful!</div>
+                                                    To activate this form, sign up at
+                                                    <br />
+                                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+                                                </div>
+                                            </div>
+                                            <!-- Submit error message-->
+                                            <!---->
+                                            <!-- This is what your users will see when there is-->
+                                            <!-- an error submitting the form-->
+                                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
+                                            <!-- Submit Button-->
+                                            <div class="d-grid"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
+                                        </form>
                                     </div>
-                                    <!-- Email address input-->
-                                    <div class="form-floating mb-3">
-                                        <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
-                                        <label for="email">Email address</label>
-                                        <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                                        <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-                                    </div>
-                                    <!-- Phone number input-->
-                                    <div class="form-floating mb-3">
-                                        <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-                                        <label for="phone">Phone number</label>
-                                        <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
-                                    </div>
-                                    <!-- Message input-->
-                                    <div class="form-floating mb-3">
-                                        <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                                        <label for="message">Message</label>
-                                        <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
-                                    </div>
-                                    <!-- Submit success message-->
-                                    <!---->
-                                    <!-- This is what your users will see when the form-->
-                                    <!-- has successfully submitted-->
-                                    <div class="d-none" id="submitSuccessMessage">
-                                        <div class="text-center mb-3">
-                                            <div class="fw-bolder">Form submission successful!</div>
-                                            To activate this form, sign up at
-                                            <br />
-                                            <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                        </div>
-                                    </div>
-                                    <!-- Submit error message-->
-                                    <!---->
-                                    <!-- This is what your users will see when there is-->
-                                    <!-- an error submitting the form-->
-                                    <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
-                                    <!-- Submit Button-->
-                                    <div class="d-grid"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
-                                </form>
+                                </div>
                             </div>
                         </div>
                     </div>
