--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Modern Business - Start Bootstrap Template</title>
+        <title>RightSized Living</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/mainlogo.png" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body class="d-flex flex-column h-100">
@@ -72,22 +73,68 @@
             </section>
             <!-- Testimonial section-->
             <div class="py-5 bg-light">
-                <div class="container px-5 my-5 reveal">
-                    <div class="row gx-5 justify-content-center">
-                        <div class="col-lg-10 col-xl-7">
-                            <div class="text-center">
-                                <div class="fs-3 mb-4">“You and your entire team helped make this move so easy and enjoyable. RightSized Living took all the stress away!”</div>
-                                <div class="d-flex align-items-center justify-content-center">
-                                    <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
-                                    <div class="fw-bold">
-                                        Michael & Marie N.
-                                        <span class="fw-bold text-primary mx-1">/</span>
-                                        Valued Customers
+                <div id="myCarousel" class="container px-5 my-5 reveal carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row gx-5 justify-content-center">
+                                <div class="col-lg-10 col-xl-7">
+                                    <div class="text-center">
+                                        <div class="fs-3 mb-4">“You and your entire team helped make this move so easy and enjoyable. RightSized Living took all the stress away!”</div>
+                                        <div class="d-flex align-items-center justify-content-center">
+                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <div class="fw-bold">
+                                                Michael & Marie N.
+                                                <span class="fw-bold text-primary mx-1">/</span>
+                                                Valued Customers
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row gx-5 justify-content-center">
+                                <div class="col-lg-10 col-xl-7">
+                                    <div class="text-center">
+                                        <div class="fs-3 mb-4">“Bro this shit is crazy trust me”</div>
+                                        <div class="d-flex align-items-center justify-content-center">
+                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <div class="fw-bold">
+                                                Jason
+                                                <span class="fw-bold text-primary mx-1">/</span>
+                                                Person
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row gx-5 justify-content-center">
+                                <div class="col-lg-10 col-xl-7">
+                                    <div class="text-center">
+                                        <div class="fs-3 mb-4">“Such a swag company!”</div>
+                                        <div class="d-flex align-items-center justify-content-center">
+                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <div class="fw-bold">
+                                                Maddy Li
+                                                <span class="fw-bold text-primary mx-1">/</span>
+                                                Untrustworthy Person
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </div>
             <!-- Services section-->
@@ -131,28 +178,29 @@
                         </div>
                     </div>
                     <div class="row gx-5 justify-content-center">
-                        <a class="btn btn-outline-light btn-lg px-4" style="width:50%;" href="#services">Find Which Services are Best for You!</a>
+                        <a class="btn btn-outline-light btn-lg px-4" style="width:50%;" href="services.html">Find Which Services are Best for You!</a>
                     </div>
                 </div>
             </section>
         </main>
         <!-- Footer-->
-        <footer class="bg-dark py-4 mt-auto">
+        <footer class="py-4 mt-auto" style="background-color:#454F84;">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Your Website 2022</div></div>
-                    <div class="col-auto">
+                    <div class="flex-sm-column col-auto">
                         <a class="link-light small" href="#!">Privacy</a>
                         <span class="text-white mx-1">&middot;</span>
                         <a class="link-light small" href="#!">Terms</a>
                         <span class="text-white mx-1">&middot;</span>
                         <a class="link-light small" href="#!">Contact</a>
                     </div>
+                    <div class="col-auto align-self-center"><div class="fw-bold fs-6 m-0 text-white">Our Ultimate Goal Is To Serve You!</div></div>
+                    <img class="col-auto .img-fluid" src="assets/nasmmlogosmall.png" alt="..." />
                 </div>
             </div>
         </footer>
         <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
