--- a/services.html
+++ b/services.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Modern Business - Start Bootstrap Template</title>
+        <title>RightSized Living</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/mainlogo.png" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -31,8 +31,9 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+                            <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                            <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                            <li class="nav-item"><a class="nav-link" href="faq.html">FAQs</a></li>
                             <li class="nav-item"><a class="nav-link" href="testimonial.html">Testimonials</a></li>
                             <li class="nav-item ms-2"><a class="btn-lg contact-button" href="contact.html">Contact Us</a></li>
                         </ul>
@@ -40,7 +41,7 @@
                 </div>
             </nav>
             <!-- Header-->
-            <header class="py-5" style="background-image: url('assets/aboutbackground.png');">
+            <header class="py-5" style="background-image: url('assets/servicesbackground.png');">
                 <div class="container px-3 my-2 w-50 h-50" style="border-radius: 15px; background-color: rgb(255,255,255,0.75);">
                     <div class="row justify-content-center">
                         <div class="col-lg-8 col-xxl-6">
